@@ -37,12 +37,12 @@ public class ERCaptchaEngine extends ListImageCaptchaEngine {
 		water.setPhase(10);
 		water.setWavelength(70);
 
-		FontGenerator shearedFont = new RandomFontGenerator(new Integer(30), new Integer(35));
-		// BackgroundGenerator back = new UniColorBackgroundGenerator(new Integer(250), new Integer(150), Color.white);
-		BackgroundGenerator back = new FunkyBackgroundGenerator(new Integer(250), new Integer(150));
+		FontGenerator shearedFont = new RandomFontGenerator(Integer.valueOf(30), Integer.valueOf(35));
+		// BackgroundGenerator back = new UniColorBackgroundGenerator(Integer.valueOf(250), Integer.valueOf(150), Color.white);
+		BackgroundGenerator back = new FunkyBackgroundGenerator(Integer.valueOf(250), Integer.valueOf(150));
 		RandomRangeColorGenerator randomWordColorGenerator = new RandomRangeColorGenerator(new int[] { 10, 30 }, new int[] { 10, 40 }, new int[] { 10, 12 });
 		RandomRangeColorGenerator randomBaffleColorGenerator = new RandomRangeColorGenerator(new int[] { 70, 120 }, new int[] { 50, 90 }, new int[] { 90, 150 }, new int[] { 100, 200 });
-		TextPaster randomPaster = new DecoratedRandomTextPaster(new Integer(6), new Integer(7), randomWordColorGenerator, new TextDecorator[] { new BaffleTextDecorator(new Integer(1), randomBaffleColorGenerator) });
+		TextPaster randomPaster = new DecoratedRandomTextPaster(Integer.valueOf(6), Integer.valueOf(7), randomWordColorGenerator, new TextDecorator[] { new BaffleTextDecorator(Integer.valueOf(1), randomBaffleColorGenerator) });
 		ImageDeformation backDef = new ImageDeformationByFilters(new ImageFilter[0]);
 		ImageDeformation textDef = new ImageDeformationByFilters(new ImageFilter[0]);
 		ImageDeformation postDef = new ImageDeformationByFilters(new ImageFilter[] { water });
